# game-design

./: .gitignore  CMakeLists.txt  Makefile  README.md  simple
Angry panda/: CMakeLists.txt
Angry panda/src/: game.cpp  game.hpp  input.hpp  main.cpp  player.cpp  player.hpp
assets/tree/: bush.aseprite
libfun/include/: Makefile  simple  simple.cpp
src/: Makefile  audioManager.cpp  audioManager.hpp  boss.cpp  boss.hpp  enemy.cpp  enemy.hpp  game  game.cpp  game.hpp  input.hpp  main.cpp  makefile  platform.hpp  player.cpp  player.hpp  texture_set.hpp
